# rwkv7-ascend-npu

./: .gitignore  ARCHITECTURE.md  ASCEND_QUANT_ACCEPTANCE.md  BENCH.md  BENCHMARK.md  BENCHMARK_QWEN35_ALBATROSS.md  CONTRIBUTING.md  CONTRIBUTIONS.md  README.md  SERVING_ACCEPTANCE.md  SPEC_DECODE.md  bootstrap.py  device_patch.py  npu_op_shim_bench.py  op_shim_cuda_bench.py  rwkv7_ascend_model_quant.py  rwkv7_ascend_quant.py  rwkv7_npu_ops.py
rwkv7-hf-ascend/: .gitattributes  .gitignore  CONTRIBUTING.md  CONTRIBUTIONS.md  LICENSE  README.md  SOURCE.md  UPSTREAM_README.md  pyproject.toml
rwkv7-hf-ascend/bench/: run_e2e_performance.py  run_w4_graph_e2e.py  run_w8_graph_e2e.py
rwkv7-hf-ascend/bench/ascend_910b3_20260724/: README.md  SHA256SUMS  bench_hf_ascend_w8.py  config_repair_7p2.json  environment.json  operator_w4_group_probe.jsonl  operator_w4_group_probe.py  operator_w8a16_big.jsonl  operator_w8a16_big.py  operator_w8abf16_probe.jsonl  quant_7p2_real.py  quant_7p2_real_w4.py  quant_7p2_real_w4_value.py  results.jsonl  results_7p2_real_bf16.json  results_7p2_real_w4fp16.json  results_7p2_real_w4fp16_value_only.json  results_7p2_real_w8bf16.json  results_native_jit.jsonl  results_training.jsonl  smoke_7p2_real.py  w8_bf16_layer_integration.jsonl  w8_layer_integration.jsonl
rwkv7-hf-ascend/bench/ascend_910b3_graph_20260724/: README.md  SHA256SUMS  hf_native_graph_e2e.json
rwkv7-hf-ascend/bench/ascend_910b3_w4_graph_20260724/: README.md  SHA256SUMS  hf_w4_graph_e2e.json
rwkv7-hf-ascend/bench/ascend_910b3_w8_graph_20260724/: README.md  SHA256SUMS  hf_w8_graph_e2e.json
rwkv7-hf-ascend/configs/: train_native_example.json  train_temp_official_x070_12x768_b16.json  train_temp_x070_12x768.json
rwkv7-hf-ascend/configs/deepspeed/: zero2.json  zero3.json
rwkv7-hf-ascend/docs/hardware/: HUAWEI_ASCEND.md
rwkv7-hf-ascend/examples/: check_environment.py  cpu_tiny_demo.py  generate.py
rwkv7-hf-ascend/examples/gradio/: README.md  native_hf_v3a_compat.py  rwkv-gradio-3-native-hf.patch
rwkv7-hf-ascend/rwkv7_hf/: __init__.py  ada_lora.py  ada_sparse_ffn.py  ascend_graph_runtime.py  ascend_quant.py  ascend_quant_w4.py  ascend_reference_oracle.py  ascend_runtime.py  ascend_w4_cle.py  blackwell_norm_mix.py  bn_tn_tuning.py  configuration_rwkv7.py  dplr_prefill.py  dplr_prefill_triton.py  extension_build.py  fused_attention_projection.py  fused_decode_norm_mix.py  fused_elementwise.py  fused_ffn.py  fused_lora.py  fused_norm_mix.py  fused_output.py  fused_prefill.py  fused_projection.py  fused_recurrent_update.py  fused_time_mix.py  kernel_policy.py  marlin_autotune.py  mlx_bridge.py  mlx_cache.py  mlx_dplr_prefill.py  mlx_mix.py  mlx_model.py  mlx_norm.py  mlx_policy.py  mlx_quant.py  mlx_scan.py  mlx_scheduler.py  mlx_session.py  mlx_speculative.py  (+33 more)
rwkv7-hf-ascend/scripts/: adapter_manifest.py  build_ascend_hf_reference.py  build_ascend_hf_reference_matrix.py  calibrate_ascend_w4_cle.py  capture_ascend_hf_candidate.py  capture_ascend_hf_candidate_matrix.py  compare_ascend_hf_reference.py  create_native_hf_view.py  create_tiny_native_hf_model.py  run_huawei_ascend_smoke.sh  smoke_ascend_hf_ragged_b2.py
rwkv7-hf-ascend/tests/: test_ascend_graph_runtime.py  test_ascend_quant.py  test_ascend_reference_oracle.py  test_ascend_runtime.py  test_ascend_w4_cle.py  test_huawei_ascend_smoke.py
rwkv7-sglang-ascend/: .gitignore  ASCEND_FFN_QUANT.md  BENCH.md  README.md  SPEC_DECODE.md  pyproject.toml  requirements-910b3-runtime.txt  versions.env
rwkv7-sglang-ascend/ascend_port/: wkv.py
rwkv7-sglang-ascend/ascend_port/ascendc/: gemv_m1_kernel.cpp
rwkv7-sglang-ascend/evidence/910b3/: README.md  sglang-rwkv-acceptance.json  sglang-rwkv-acceptance.sha256  sglang-rwkv-acceptance.trace.jsonl  (+1 more)
rwkv7-sglang-ascend/examples/: ascend_w4_raw_candidate_manifest.json  ascend_w8_raw_candidate_manifest.json
rwkv7-sglang-ascend/patches/: sgl-kernel-npu-a2-soc.patch  sglang-all-linear-pool.patch  sglang-external-linear-pure-torch-npu.patch
rwkv7-sglang-ascend/scripts/: acceptance_engine.py  deploy_ascend.sh  deploy_spec_wiring.py  deploy_wiring.py  engine_worker.py  install_production.sh  install_sglang_venv29.sh  rebuild_sgl_kernel_npu_29.sh  run_e2e_performance.py  run_engine_acceptance.sh  serve_ascend.sh  serve_production.sh  test_torch_npu_29_bf16.sh  verify_install.py
rwkv7-sglang-ascend/sglang_rwkv7_ascend/: __init__.py  ascend_quant.py  backend.py  configuration_rwkv7.py  serve.py  state_cache.py
rwkv7-sglang-ascend/tests/: test_ascend_quant_seam.py  test_wkv_unit.py
vllm-rwkv-ascend/: .gitignore  ASCEND_FFN_QUANT.md  BENCHMARK.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  SOURCE.md  VLLM_ASCEND_PRODUCTION.md  pyproject.toml  run_phase1.py
vllm-rwkv-ascend/compat/: install_triton_target_info_shim.py
vllm-rwkv-ascend/evidence/: pypi_v018_conflict.txt  real_7b_schema.txt  real_engine_acceptance.json  real_engine_acceptance.sha256
vllm-rwkv-ascend/examples/: ascend_w4_raw_candidate_manifest.json  ascend_w8_raw_candidate_manifest.json
vllm-rwkv-ascend/perf/: README.md  analyze_qwen35_matrix.py  bench_graph_overhead.py  bench_npugraph.py  bench_qwen35_npu.py  bench_qwen35_vllm_ascend.py  bench_rwkv7_pth_prefill.py  benchmark_metadata.py  model_matrix.py  npu_memory.py  qwen35_dense_matrix.json  run_perf.py  run_qwen35_dense_matrix.py  rwkv7_ascend_v3.cpp  rwkv7_chunk_scan.py  rwkv7_pth_engine.py
vllm-rwkv-ascend/rwkv7_vllm_ascend/: __init__.py  ascend_quant.py  model.py  plugin.py  state.py
vllm-rwkv-ascend/serving/: QUANT.md  SERVING.md  graph_decode.py  serve_engine.py  serve_full.py
vllm-rwkv-ascend/tests/: test_benchmark_metadata.py  test_chunk_scan.py  test_cpp_forward.py  test_graph_greedy_scheduler.py  test_model_matrix.py  test_npu_memory.py  test_npugraph_correctness.py  test_pth_engine.py
vllm-rwkv-ascend/tests_vllm/: run_e2e_performance.py  run_real_engine_acceptance.py  run_real_engine_smoke.py  test_ascend_quant_seam.py  test_chunk_scheduler_oracle.py  test_plugin_contract.py  test_reference_math.py  test_state_contract.py
(+288 files in other folders)
